--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8081
+  servlet:
+    context-path: /micro
+spring:
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 10
