--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,12 @@
     </dependencies>
 
     <build>
+        <finalName>microservice</finalName>
         <plugins>
-<!--            <plugin>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--            </plugin>-->
+          <plugin>
+                <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-maven-plugin</artifactId>
+          </plugin>
 
 <!--            <plugin>-->
 <!--                <groupId>com.spotify</groupId>-->
